--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "input": "./gallery",
   "output": "./build_output",
-  "title": "Hearing Things",
+  "title": "$HEARING - 97sraAGszzEFY6AW8iuWfTceBQWa1RzuFRXryJqSbonk",
   "sort-albums-by": "title",
   "sort-media-by": "filename",
   "download-photos": "copy",
